# istr

./: .gitignore  changelog.md  pyproject.toml  readme.html  readme.md  sendmoremoney.py  test.md  upload changelog.html.py
istr/: LICENSE.txt  __init__.py  install istr.py  istr.py
istr-python-0.0.0/: README.md
istr_python-0.0.2/: pyproject.toml
tests/: test_istr.py
tools/: install istr from github.py  install istr.py
