[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "istr-python"
authors = [
    {name = "Ruud van der Ham", email = "rt.van.der.ham@gmail.com"}
]
description = "istr is a module to use strings as if they were integers."
version = "0.0.8"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only"
]
[project.urls]
Homepage = "https://github.com/salabim/istr"
Repository = "https://github.com/salabim/istr"
